[package]
name = "tiny_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
vulkano = "0.22.0"
vulkano-win = "0.22.0"
vulkano-shaders = "0.22.0"
winit = "0.24.0"
bevy = "0.9.1"
bevy-inspector-egui = "0.14.0"
glam = "0.22.0"
